# computer_systems_a_programmer_perspective

./: .gitignore  CMakeLists.txt  README.md  hex2dd
app/: CMakeLists.txt  p11.2_hex2dd.c
code_examples/: 196_arith.s  45_show_bytes.c  CMakeLists.txt
docs/: 11.2.md  11.2_hex2dd.md  11.3.md  11.3_dd2hex.md  3.11.md  3.11_disassemble.md  3.12.md  3.5.md  p11.2.md  p11.3.md  p3.5.md
docs/1/: 1.1.md  1.2.md
docs/10/: ok_10.1.md
docs/11/: 11.2_hex2dd.md  11.3_dd2hex.md  ok_11.3_dd2hex.md  ok_11.5.md
docs/12/: ok_12.10.md  ok_12.13.md  ok_12.14.md  ok_12.15.md  ok_12.2.md  ok_12.4.md  ok_12.5.md  ok_12.6.md  ok_12.9.md
docs/2/: 2.1.md  2.10_inplace_swap.md  2.11_inplace_swap_bug.md  2.12_masking.md  2.13_bis_bic.md  2.14_logical_operation.md  2.15.md  2.16_shift.md  2.17.md  2.18.md  2.19.md  2.2.md  2.20.md  2.21.md  2.22.md  2.23.md  2.24.md  2.25.md  2.26.md  2.27_uadd_ok.md  2.28.md  2.29.md  2.3.md  2.30_tadd_ok.md  2.31.md  2.32.md  2.32_tsub_ok.md  2.33.md  2.34.md  2.36.md  2.38.md  2.4.md  2.43.md  2.48.md  2.49.md  2.5.md  2.50.md  2.52.md  2.6.md  2.7.md  (+15 more)
docs/3/: 3.15.md  3.16.md  3.20.md  3.23.md  3.24.md  3.25.md  3.5.md  3.6.md  3.8.md  3.9.md
docs/4/: 4.30.md  4.31.md  4.32.md  4.33.md  4.34.md  4.35.md  ok_4.11.md  ok_4.12_median.md  ok_4.14.md  (+16 more)
problem/: CMakeLists.txt
problems/: 11.3_dd2hex.c  3.11.c  3.11.s  CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt  conversion  conversion.c  matrix_address  matrix_address.c  memory_aliasing.c  operator_precedence.c  pointer.c  shift.c  void_increment.c
tests/682/: foo5.c  foobar5
(+282 files in other folders)
